@@ -10,6 +10,8 @@ Version 1.13.6+dev:
  * Lua API:
    * New attributes in side proxy:
      num_units, num_villages, total_upkeep, expenses, net_income
+ * Wesnoth Formula Engine:
+   * New str_upper and str_lower functions for case transformations
  * WML Engine:
    * Removed LOW_MEM option when building.
    * Add color= attribute to [floating_text]
